<resources>
    <string name="app_name">Dab</string>
    <string name="app_desc_name">Debt Tracker</string>
    <string name="app_version">Version 1.0.1</string>
    <string name="website_url">https://debttracker.000webhostapp.com</string>
    <string name="RM">RM</string>
    <string name="USD">USD</string>

    <string name="home_lbl">Home</string>
    <string name="previous_lbl">Previous</string>
    <string name="settings_lbl">Settings</string>
    <string name="feedback_lbl">Feedback</string>
    <string name="search_lbl">Search</string>
    <string name="debt_details_lbl">Debt Details</string>
    <string name="debtor_name_lbl">Debtor Name</string>
    <string name="creditor_name_lbl">Creditor Name</string>
    <string name="debt_title_lbl">Debt Title</string>
    <string name="amount_lbl">Amount</string>
    <string name="reminder_lbl">Reminder</string>
    <string name="reminder_on_lbl">Reminder On</string>
    <string name="reminder_off_lbl">Reminder Off</string>
    <string name="repeat_lbl">Repeat</string>
    <string name="date_lbl">Date</string>
    <string name="start_date_lbl">Start Date</string>
    <string name="time_lbl">Time</string>
    <string name="add_lbl">Add</string>
    <string name="save_lbl">Save</string>
    <string name="cancel_lbl">Cancel</string>
    <string name="delete_lbl">Delete</string>
    <string name="deleted_lbl">Deleted</string>
    <string name="creditor_lbl">Creditor</string>
    <string name="empty_data_lbl">No Debt</string>
    <string name="created_on_lbl">Created on</string>
    <string name="settled_on_lbl">Settled on</string>
    <string name="edit_debt_lbl">Edit Debt</string>
    <string name="add_debt_lbl">Add Debt</string>
    <string name="delete_debt_lbl">Delete Debt</string>
    <string name="view_debt_lbl">View Debt</string>
    <string name="confirm_lbl">Confirm</string>
    <string name="ongoing_lbl">Ongoing</string>
    <string name="settled_lbl">Settled</string>
    <string name="set_lbl">Set</string>
    <string name="you_lbl">You</string>
    <string name="you_are_lbl">You are</string>
    <string name="debt_updated_lbl">Debt has been updated</string>
    <string name="set_settled_lbl">Set debt as settled</string>
    <string name="del_msg">Are you sure you want to delete this debt?\nThis action cannot be undone.</string>
    <string name="confirm_msg">Set this debt as settled?\nThis action cannot be undone.</string>
    <string name="delete_all_data_lbl">Delete All Data</string>
    <string name="del_all_msg">Are you sure you want to delete all data?\nThis action cannot be undone.</string>
    <string name="select_currency_lbl">Select currency</string>
    <string name="about_us_lbl">About Us</string>
    <string name="more_on_lbl">Read More</string>
    <string name="about_us_msg">Dab is debt tracker application that records all user debts.\nIt is a part of CSC 4506 Mobile Application Development project, Kulliyyah of Information Communication Technology, International Islamic University Malaysia.</string>
    <string name="name_lbl">Name</string>
    <string name="email_lbl">Email</string>
    <string name="category_lbl">Category</string>
    <string name="message_lbl">Message</string>
    <string name="send_lbl">Send</string>
    <string name="send_feedback_lbl">Send Feedback</string>
    <string name="bug_report_lbl">Bug Report</string>
    <string name="show_me_web_lbl">Show my name as contributor on Dab app website</string>
    <string name="empty_lbl">Empty</string>
    <string name="empty_fill_msg">Please fill in all required data</string>
    <string name="importexport_lbl">Import/Export Data</string>
    <string name="importexport_options_lbl">Import/Export Options</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
