<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_lbl" />

            <EditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/emailTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_lbl" />

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/categoryTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_lbl" />

            <RadioGroup
                android:id="@+id/cateoryRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checkedButton="@+id/feedbackRadio"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/feedbackRadio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/feedback_lbl" />

                <RadioButton
                    android:id="@+id/bugRadio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bug_report_lbl" />

            </RadioGroup>

            <TextView
                android:id="@+id/messageTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_lbl" />

            <EditText
                android:id="@+id/messageET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginBottom="10dp"/>

            <CheckBox
                android:id="@+id/showOnWebCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_me_web_lbl"
                android:layout_marginBottom="10dp" />

            <Button
                android:id="@+id/sendBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/send_lbl" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>